# pyBaram

./: .environment.yml  AUTHORS  README.md  pyproject.toml
.github/workflows/: release-wheel.yml
doc/src/: conf.py  developer_guide.rst  examples.rst  index.rst  install.rst  references.bib  theory.rst  user_guide.rst
examples/cylinder/: cylinder.cgns  cylinder.ini
examples/hb2/: README.md  hb2.ini
examples/hb2/axi/: hb2axi.cgns  hb2axi.ini
examples/oneram6/: README.md  oneram6.ini
examples/rae2822/: rae2822.ini
pybaram/: __main__.py  inifile.py  tui.py
pybaram/api/: io.py  progress.py  simulation.py  sweep.py  sweep_progress.py
pybaram/backends/: parse.py  types.py
pybaram/backends/cpu/: backend.py  loop.py
pybaram/integrators/: __init__.py  base.py  blusgs.py  dts.py  jacobi.py  lusgs.py  petsc.py  relaxation.py  steady.py  unsteady.py
pybaram/partitions/: __init__.py  metis.py  metiswrapper.py
pybaram/plugins/: base.py  force.py  stats.py  surfint.py  writer.py
pybaram/readers/: base.py  cgns.py  cgnswrapper.py  native.py
pybaram/solvers/: __init__.py
pybaram/solvers/base/: elements.py  inters.py  system.py  vertex.py
pybaram/solvers/baseadvec/: elements.py  inters.py  system.py  vertex.py
pybaram/solvers/baseadvecdiff/: inters.py  system.py
pybaram/solvers/euler/: bcs.py  elements.py  inters.py  jacobian.py  rsolvers.py
pybaram/utils/: ctypes.py  inverse.py  nb.py  np.py
pybaram/writers/: base.py  tecplot.py  vtk.py
tests/: test_cli.py  test_progress.py  test_sweep.py  test_sweep_progress.py  test_tui.py
(+21 files in other folders)
